@@ -35,6 +35,7 @@ Luigi Ballabio
 Jeff Balogh
 Michael J. Barber
 Chris Barker
+Nick Barnes
 Quentin Barnes
 Richard Barran
 Cesar Eduardo Barros
